Alter DELETE /f-counts/:id route and query to distinguish between deleting a record successfully and not finding a record
