# openApi3.yml
@@ -23,8 +23,8 @@ paths:
           description: Created
         '400':
           description: Bad Request
-        #'401':
-          #description: Unauthorized
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
       callbacks:
@@ -53,8 +53,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/fCountResponse'
-        #'401':
-          #description: Unauthorized
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
   /f-counts/{id}:
@@ -77,8 +77,8 @@ paths:
                 $ref: '#/components/schemas/fCountResponse'
         '404':
           description: Not Found
-        #'401':
-          #description: Unauthorized
+        '401':
+          description: Unauthorized
         '500':
           description: Internal Server Error
     delete:
@@ -96,10 +96,10 @@ paths:
           description: No Content
         '404':
           description: Not Found
-        #'401':
-          #description: Unauthorized
-        #'500':
-          #description: Internal Server Error
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal Server Error
 components:
   securitySchemes:
     ApiKeyAuth:
